k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jamescscott-io
  namespace: jamescscott-io
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: jamescscott-io
