k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jamescscott-io-ingress
  namespace: jamescscott-io
  annotations:  
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - jamescscott.io
    secretName: jamescscott-io-prod-blog-cert
  rules:
  - host: jamescscott.io
    http:
      paths:
      - backend:
          serviceName: jamescscott-io
          servicePort: 80
